# Helena_Haffner_Python_Testing_P11_08112024

./: .gitignore  README.md  competitions.json  locustfile.py  pyproject.toml  server.py
templates/: booking.html  index.html  points_table.html  welcome.html
tests/: choice_data_helper.py  conftest.py  data_helper.py  mock.py  test_booking_redirection.py  test_connection.py  test_exceed_points_or_places.py  test_negative_purchases.py  test_no_places_anymore.py  test_points_reflection.py  test_points_table.py  test_project.py  test_purchase_past_tournament.py  test_too_many_purchases.py  test_user_connect_and_purchases.py  test_user_connect_and_purchases_but_no_place_anymore.py  test_zero_purchase.py
tests/functional_tests/: test_booking_redirection.py  test_connection.py  test_exceed_points_or_places.py  test_negative_purchases.py  test_no_places_anymore.py  test_purchase_past_tournament.py  test_too_many_purchases.py  test_zero_purchase.py
tests/unitary_tests/: test_comp_still_has_available_places.py  test_found_this_club.py  test_found_this_competition.py  test_max_allowed_places_function.py  test_past_competition_filter.py  test_points_table.py  test_unknown_purchases.py
