[tool.poetry]
name = "helena-haffner-python-testing-p11-08112024"
version = "0.1.0"
description = ""
authors = ["Featherine <helaena.haffner@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
click = "7.1.2"
flask = "1.1.2"
itsdangerous = "1.1.0"
jinja2 = "2.11.2"
markupsafe = "1.1.1"
werkzeug = "1.0.1"
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
